// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthPrivErc20Vault deposit can be called by whitelisted user 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 73335,
}
`;

exports[`EthPrivErc20Vault deposit deposit through receive fallback can be called by whitelisted sender 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 80538,
}
`;

exports[`EthPrivErc20Vault mint osToken can mint from whitelisted user 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 178622,
}
`;

exports[`EthPrivErc20Vault transfer can transfer to whitelisted user 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 61346,
}
`;
